Refactoring + add heartbeat

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "dhc-gw-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "bot.js",
   "scripts": {
+    "start": "node --experimental-modules -r dotenv/config bot.mjs s",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,5 +11,13 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "dotenv": "^6.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
+    "eslint-plugin-react": "^7.12.4"
   }
 }
