--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "lint": "eslint . --ext .js,.mjs",
     "start": "node --experimental-modules -r dotenv/config bot.mjs s",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
